# 24-card-game-bot

./: README.md  bot.py  pyproject.toml
