[tool.poetry]
name = "game-card-24-bot"
version = "0.1.0"
description = ""
authors = ["Simon Puyosa <simonpuyosaraffoul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
